# tileigi

./: CHANGELOG.adoc  CHANGELOG.md  Cargo.toml  README.adoc
docs/: data-yml.adoc
src/: fileio.rs  fraction.rs  lib.rs  printer.rs  simplify.rs  stringstore.rs  sutherland_hodgeman.rs  test.rs  validity.rs
src/clip/: cohen_sutherland.rs  mod.rs  sutherland_hodgeman.rs  test.rs  weiler_atherton.rs
src/input/: mod.rs  tegola.rs  tmsource.rs
