[package]
name = "tilegen"
version = "0.2.0"
authors = ["Rory McCann <rory@technomancy.org>"]

[dependencies]
mapbox_vector_tile = { git = "https://github.com/rory/rust-mapbox-vector-tile.git" }
yaml-rust = "0.3"
slippy-map-tiles = "0.12"
postgres = { git = "https://github.com/rory/rust-postgres.git" }
wkb = { git = "https://github.com/rory/rust-wkb.git", tag = "v0.2.0" }
geo = { git = "https://github.com/rory/rust-geo.git", branch = "rory-everything" }
clap = "2"
serde_json = "1"
users = "0.6.0"
num-traits = "0.1"
md5 = "0.3.6"
rusqlite = "0.13.0"
byteorder = "1.2.1"

[profile.release]
debug=true
