[package]
name = "tileigi"
version = "0.7.0"
authors = ["Rory McCann <rory@technomancy.org>"]

[dependencies]
mapbox_vector_tile = "0.1.0"
yaml-rust = "0.3"
slippy-map-tiles = "0.14"
postgres = "0.15.2"
wkb = "0.2.0"
geo = "0.7.3"
clap = "2"
serde_json = "1"
users = "0.6.0"
num-traits = "0.1"
md5 = "0.3.6"
rusqlite = "0.13.0"
byteorder = "1.2.1"
separator = "0.3.1"
log = "0.4.1"
env_logger = "0.5.6"


[profile.release]
debug=true
